# ESP32_BLE_API

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
bleprph/: sdkconfig
bleprph/main/: main.c
doc/web/: app.css  app.js  index.html
main/: CMakeLists.txt  main.c
main/inc/: http_server.h  max30102-registers.h  user_battery_level.h  user_bsp.h  user_carrier_wave.h  user_dac.h  user_external_wave.h  user_hvconverter.h  user_mcpwm.h  user_modulation_wave.h  user_timer.h  wifi_app.h
main/inc/BLE/: user_ble.h
main/src/: http_server.c  user_battery_level.c  user_bsp.c  user_carrier_wave.c  user_dac.c  user_external_wave.c  user_hvconverter.c  user_max30102.c  user_mcpwm.c  user_modulation_wave.c  user_timer.c  wifi_app.c
main/src/BLE/: user_ble.c
